projects/compiler/test/typechecker/decorators/error_trait_impl_duplicate.abra
trait Foo {}
decorator Bar : Foo, Foo {}

// A trait is considered duplicated regardless of the provided generics
trait Foo2<A> {}
decorator Bar2 : Foo2<Int>, Foo2<Float> {}